# todo-list

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: main.yml
task_manager/: main.py  manager.py
task_manager/app/: __init__.py
task_manager/app/controllers/: tasks.py
task_manager/app/models/: tasks_models.py
task_manager/app/routes/: default.py  default_route.py  task_route.py
tests/: test_controller_task.py  test_default.py  test_default_route.py  test_task_route.py
