[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
pytest = "^7.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"


[tool.poetry.group.format.dependencies]
black = "^22.12.0"
isort = "^5.11.4"



[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[too.black]
line-length = 79